--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "pleonasm/merkle-tree": "1.0.0",
     "composer/semver": "^1.4.0|^3.2.0",
     "lastguest/murmurhash": "^2.1.0",
-    "paragonie/ecc": "^2.3.0",
+    "paragonie/ecc": "dev-limonad",
     "bitwasp/buffertools": "^0.5.0",
     "bitwasp/bech32": "^0.0.1"
   },
